Setup ShadCN + Fronent Pages

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ NOTION_API=secret_1JyhcAIKBLNjefTC6tBWltVFWQ7vWl5BmKgA9yuLRcP
 NOTION_DB_API=50400f08bad34dc08dd8c61063548cd1
 
 PORT=8000
+
+CORS_ORIGIN=*
