--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/frontend/node_modules
 /.pnp
 .pnp.js
 
@@ -9,9 +9,9 @@
 /coverage
 
 # production
-/build
+/frontend/build
 
-.env
+/frontend/.env
 
 # misc
 .DS_Store
@@ -23,3 +23,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+/backend/node_modules
+
+/backend/.env
